package java101.Java54_ElevatorDiagram;

public class ArrivalLight {
    private boolean lightStatus;

    public ArrivalLight() {
        this.lightStatus = false;
    }

    public void turnOn() {
        // Işığı açma işlemleri
    }

    public void turnOff() {
        // Işığı kapatma işlemleri
    }
}
