package java101.Java54_ElevatorDiagram;

public class CallButton {
    private Direction direction;
    private boolean isActive;

    public CallButton(Direction direction) {
        this.direction = direction;
        this.isActive = false;
    }

    public void activate() {
        // Düğmeyi etkinleştirme işlemleri
    }

    public void deactivate() {
        // Düğmeyi devre dışı bırakma işlemleri
    }
}