package java101.Java54_ElevatorDiagram;

public enum Direction {
    UP,
    DOWN
}