package java101.Java54_ElevatorDiagram;

public class DownElevator extends Elevator {
    public DownElevator(int capacity) {
        super(capacity);
    }
}
