package java101.Java54_ElevatorDiagram;

public class UpElevator extends Elevator {
    public UpElevator(int capacity) {
        super(capacity);
    }
}
