@startuml

title __JAVA54_ELEVATORDIAGRAM's Class Diagram__\n

  namespace java101 {
    namespace Java54_ElevatorDiagram {
      class java101.Java54_ElevatorDiagram.ArrivalLight {
          - lightStatus : boolean
          + ArrivalLight()
          + turnOff()
          + turnOn()
      }
    }
  }
  

  namespace java101 {
    namespace Java54_ElevatorDiagram {
      class java101.Java54_ElevatorDiagram.CallButton {
          - isActive : boolean
          + CallButton()
          + activate()
          + deactivate()
      }
    }
  }
  

  namespace java101 {
    namespace Java54_ElevatorDiagram {
      enum Direction {
        DOWN
        UP
      }
    }
  }
  

  namespace java101 {
    namespace Java54_ElevatorDiagram {
      class java101.Java54_ElevatorDiagram.DownElevator {
          + DownElevator()
      }
    }
  }
  

  namespace java101 {
    namespace Java54_ElevatorDiagram {
      class java101.Java54_ElevatorDiagram.Elevator {
          - capacity : int
          - currentFloor : int
          - isMoving : boolean
          - targetFloors : List<Integer>
          + Elevator()
          + addFloor()
          + closeDoor()
          + moveDown()
          + moveUp()
          + openDoor()
      }
    }
  }
  

  namespace java101 {
    namespace Java54_ElevatorDiagram {
      class java101.Java54_ElevatorDiagram.Floor {
          - floorNumber : int
          + Floor()
          + callElevator()
          + pressButton()
      }
    }
  }
  

  namespace java101 {
    namespace Java54_ElevatorDiagram {
      class java101.Java54_ElevatorDiagram.UpElevator {
          + UpElevator()
      }
    }
  }
  

  java101.Java54_ElevatorDiagram.CallButton o-- java101.Java54_ElevatorDiagram.Direction : direction
  java101.Java54_ElevatorDiagram.DownElevator -up-|> java101.Java54_ElevatorDiagram.Elevator
  java101.Java54_ElevatorDiagram.Floor o-- java101.Java54_ElevatorDiagram.ArrivalLight : arrivalLight
  java101.Java54_ElevatorDiagram.Floor o-- java101.Java54_ElevatorDiagram.CallButton : callButton
  java101.Java54_ElevatorDiagram.UpElevator -up-|> java101.Java54_ElevatorDiagram.Elevator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
